# simulator

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LifeSimulator  Makefile  cmake_install.cmake  dna.txt
include/: Climate.h  Constants.h  LogManager.h  Map.h  SolarCycle.h
include/plants/: Grass.h
logs/: environment.json
src/: Climate.cpp  LogManager.cpp  Map.cpp  SolarCycle.cpp  main.cpp
src/plants/: Grass.cpp
